@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 
-- Method Date->setDate()
-- Method Date->format()
+- Method Date::__toString()
+- Method Date::setDate()
+- Method Date::format()
 - Changelog
